# robostats

./: .gitignore  Cargo.toml  PRIVACY_POLICY.md  Shuttle.toml  readme.md
.github/: CODE_OF_CONDUCT.md
src/: main.rs
src/api/: mod.rs  robotevents.rs  skills.rs  vrc-data-analysis.rs  vrc_data_analysis.rs
src/api/robotevents/: client.rs  model.rs  schema.rs
src/api/vrc_data_analysis/: client.rs  mod.rs  schema.rs
src/api/vrcdataanalysis/: client.rs  schema.rs
src/commands/: mod.rs  ping.rs  predict.rs  team.rs  teams.rs  wiki.rs
src/commands/teaminfo/: embeds.rs  mod.rs  team.rs
