[package]
name = "robostats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.0"
tokio = "1.26.0"
shuttle-secrets = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-serenity = { version = "0.34.1", default-features = false, features = ["serenity-0-12-rustls_backend"] }
lazy_static = "1.4.0"
serde = "1.0.193"
reqwest = { version = "0.11.22", features = ["json"] }
hashlink = "0.8.4"
