[package]
name = "robostats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotevents = "0.6.0"
serenity = { version = "0.12.4", features = ["collector"] }
tokio = "1.43.0"
shuttle-runtime = "0.52.0"
shuttle-serenity = "0.52.0"
serde = "1.0.193"
reqwest = { version = "0.11.22", features = ["json"] }
shuttle = "0.8.0"
